# portfolio-DE

./: .dockerignore  README.md  dockerfile  pyproject.toml
Proyectos Treinta/b2b/ZYS_standarization_bogota/: .gitignore  docker-compose.yaml  dockerfile
Proyectos Treinta/b2b/ZYS_standarization_bogota/app/: main.py
Proyectos Treinta/b2b/ZYS_standarization_bogota/app/models/: order.py  product.py
Proyectos Treinta/b2b/ZYS_standarization_bogota/app/services/: db.py
Proyectos Treinta/b2b/colanta_standarization_bogota/app/: main.py
Proyectos Treinta/b2b/colanta_standarization_bogota/app/models/: combos.py  order.py  product.py
Proyectos Treinta/b2b/colanta_standarization_bogota/app/services/: bigquery.py  db.py
Proyectos Treinta/b2b/tropi_standarization/: 2023-07-29 13-35-51.txt  pyproject.toml
Proyectos Treinta/b2b/tropi_standarization/Notebooks/: Script Tropi.ipynb
Proyectos Treinta/b2b/tropi_standarization/app/: main.py
Proyectos Treinta/b2b/tropi_standarization/app/models/: combos.py  order.py  product.py
Proyectos Treinta/b2b/tropi_standarization/app/services/: db.py
Proyectos Treinta/b2b/tropi_standarization_barranquilla/app/: main.py
Proyectos Treinta/b2b/tropi_standarization_barranquilla/app/models/: combos.py  product.py
Proyectos Treinta/b2b/tropi_standarization_barranquilla/app/services/: db.py
Proyectos Treinta/b2b/tropi_standarization_cali/app/: main.py
Proyectos Treinta/b2b/tropi_standarization_cali/app/models/: combos.py  order.py  product.py
Proyectos Treinta/b2b/tropi_standarization_cali/app/services/: db.py  drive.py
Proyectos Treinta/b2b/tropi_standarization_medellin/: dockerfile
Proyectos Treinta/b2b/tropi_standarization_medellin/app/: main.py
Proyectos Treinta/b2b/tropi_standarization_medellin/app/models/: order.py
Proyectos Treinta/b2b/tropi_standarization_medellin/app/services/: db.py
Proyectos Treinta/b2b/tropi_standarization_pereira/: pyproject.toml
Proyectos Treinta/b2b/tropi_standarization_pereira/app/: main.py
Proyectos Treinta/b2b/tropi_standarization_pereira/app/models/: __init__.py  combos.py  order.py  product.py
Proyectos Treinta/b2b/tropi_standarization_pereira/app/services/: db.py
Proyectos Treinta/b2b_ops_creation_clients/: .dockerignore  docker-compose.yaml  pyproject.toml
Proyectos Treinta/b2b_ops_creation_clients/app/: main.py
Proyectos Treinta/b2b_ops_creation_clients/app/services/: bigquery.py  db_bogota.py  drive.py  secret_manager.py
Proyectos Treinta/bitrix_etl/: .gitignore  pyproject.toml
Proyectos Treinta/bitrix_etl/app/: main.py
Proyectos Treinta/bitrix_etl/app/services/: bigquery.py  bitrix_endpoints.py  prueba.py
Proyectos Treinta/bitrix_leads_fb/: pyproject.toml
Proyectos Treinta/bitrix_leads_fb/app/: main.py
Proyectos Treinta/bitrix_leads_fb/app/core/: treintaLogger.py
Proyectos Treinta/bitrix_leads_fb/app/services/: bigquery.py  leads_extract.py
Proyectos Treinta/core-sku-service/: .gitignore  README.md
Proyectos Treinta/core-sku-service/app/: categories.json  main.py  pyproject.toml  units_code.json
Proyectos Treinta/core-sku-service/app/api/api_v1/: api.py
Proyectos Treinta/core-sku-service/app/api/api_v1/endpoints/: datadog.py  gtins.py
Proyectos Treinta/core-sku-service/app/core/: config.py
Proyectos Treinta/core-sku-service/app/crud/: __init__.py  crud_gtins.py
Proyectos Treinta/core-sku-service/app/db/: base.py
Proyectos Treinta/core-sku-service/app/models/: csrf.py  gtins.py
Proyectos Treinta/core-sku-service/app/schemas/: gtins.py
Proyectos Treinta/core-sku-service/docker/: Dockerfile
Proyectos Treinta/products_std/: products_std 2.ipynb
Proyectos Treinta/products_std_mongo_upload/: pyproject.toml
Proyectos Treinta/products_std_mongo_upload/app/: main.py
Proyectos Treinta/products_std_mongo_upload/app/services/: db_query.py  secret_manager.py  send_mongo.py
Proyectos Treinta/score_leads_send/: Dockerfile  config.py  pyproject.toml  score_up.py  treintaLogger.py
Proyectos Treinta/scrapping_module/scraping_teate/app/: main.py
Proyectos Treinta/scrapping_module/scraping_teate/app/scrappers/: scrap_te.py
Proyectos Treinta/scrapping_module/scrapping_b/: dockerfile
Proyectos Treinta/scrapping_module/scrapping_b/app/: main.py
Proyectos Treinta/scrapping_module/scrapping_b/app/scrappers/: scrap_b.py
Proyectos Treinta/scrapping_module/scrapping_c/app/: main.py
Proyectos Treinta/scrapping_module/scrapping_c/app/core/: config.py
Proyectos Treinta/scrapping_module/scrapping_c/app/scrappers/: scrap_c.py
Proyectos Treinta/scrapping_module/scrapping_ca/app/: main.py
Proyectos Treinta/scrapping_module/scrapping_dan/: dockerfile
Proyectos Treinta/scrapping_module/scrapping_dan/app/: .gitignore  main.py
Proyectos Treinta/scrapping_module/scrapping_f/: pyproject.toml
Proyectos Treinta/scrapping_module/scrapping_f/app/: main.py
Proyectos Treinta/scrapping_module/scrapping_ln/app/: main.py
Proyectos Treinta/scrapping_module/scrapping_sa/app/: main.py
Proyectos Treinta/scrapping_module/scrapping_sl/app/: main.py
Proyectos Treinta/sku-comparison/: data.json  info.json  sku_match.py  transfer-tables.py
Proyectos Treinta/standarization-project/: dockerfile
Proyectos Treinta/standarization-project/app/: .gitignore  main.py  pyproject.toml
Proyectos Treinta/standarization-project/app/src/: b2b_standarization.py  prueba.py
Proyectos Treinta/upload_match_products_ean_mongo/: Dockerfile
Proyectos Treinta/upload_match_products_ean_mongo/app/: main.py  pyproject.toml
Proyectos Treinta/upload_scrappers_products_mongo_prod/app/: main.py
Steam ETL Project/: pyproject.toml
Steam ETL Project/app/: extract.py
Steam ETL Project/app/core/: logger.py
Steam ETL Project/app/models/: models.py
Steam ETL Project/app/services/: mysql_conn.py
app/: main.py
app/models/: models.py  table_models.py
globant_data_challenge/: .gitignore  README.md  dockerfile  pyproject.toml
globant_data_challenge/app/: main.py
globant_data_challenge/app/core/: logger.py
globant_data_challenge/test/: test_main.py
(+8 files in other folders)
