[tool.poetry]
name = "bitrix-etl"
version = "0.1.0"
description = ""
authors = ["stivy2 <steven.porras@treinta.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^2.0.2"
google = "^3.0.0"
google-cloud-bigquery = "^3.11.3"
pyarrow = "^12.0.1"
requests = "^2.31.0"
db-dtypes = "^1.1.1"
fast-bitrix24 = "^1.5.16"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
