[tool.poetry]
name = "standarization-project"
version = "0.1.0"
description = ""
authors = ["Natalia Cardona <natalia.cardona@treinta.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
google-cloud-secret-manager = "^2.12.0"
google-cloud-bigquery = "^3.3.0"
google-auth = "^2.9.1"
google-oauth = "^1.0.0"
pandas = "^1.4.3"
db-dtypes = "^1.0.2"
google-api-python-client = "^2.55.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
oauth2client = "^4.1.3"
google = "^3.0.0"
numpy = "^1.23.3"
DateTime = "^5.0"
fuzzywuzzy = "^0.18.0"
Levenshtein = "^0.21.0"
pymongo = "^4.3.3"
scipy = "^1.10.1"
tqdm = "^4.65.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipykernel = "^6.15.1"
google-cloud = "^0.34.0"
google-oauth = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
